k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-rest-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-rest-api
  template:
    metadata:
      labels:
        app: weather-rest-api
    spec:
      containers:
        - name: weather-rest-api
          image: weather-rest-api-weather-rest-api:latest
          ports:
            - containerPort: 8080
