k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-rest-api-service
spec:
  selector:
    app: weather-rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
